# django-docker-compose-postgres-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  entrypoint.sh  manage.py  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/products/: filters.py  handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: enums.py  exceptions.py  models.py
core/apps/common/clients/: elasticsearch.py
core/apps/customers/: admin.py  apps.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py  containers.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exceptions/: products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/management/commands/: upsert_product_search.py
core/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_review.py  0003_product_tags.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/apps/products/services/: products.py  reviews.py  search.py
core/apps/products/use_cases/reviews/: create.py
core/apps/products/use_cases/search/: upsert_search_data.py
core/project/: asgi.py  containers.py  middlewares.py  urls.py  wsgi.py
core/project/settings/: local_example.py  main.py
docker_compose/: app.yaml  monitoring.yaml  storages.yaml
docker_compose/fluent-bit/: fluent-bit.conf
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
